// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when loading a warning message we have expected null state  on initial load 1`] = `null`;

exports[`when loading a warning message we have expected props on initial load 1`] = `
Object {
  "warningMessage": Array [
    "test1",
    "test2",
    "test3",
  ],
}
`;

exports[`when loading a warning message we should be able to change the background color 1`] = `
<Warning
  backgroundColor="colorfulness"
  warningMessage={
    Array [
      "test1",
      "test2",
      "test3",
    ]
  }
>
  <div
    className="alert alert-warning"
    role="alert"
  >
    test1
    test2
    test3
  </div>
</Warning>
`;

exports[`when loading a warning message we should have a full initialization 1`] = `
<Warning
  warningMessage={
    Array [
      "test1",
      "test2",
      "test3",
    ]
  }
>
  <div
    className="alert alert-warning"
    role="alert"
  >
    test1
    test2
    test3
  </div>
</Warning>
`;
